--- a/activemindtechnologies/src/assets/css/global.css
+++ b/activemindtechnologies/src/assets/css/global.css
@@ -2882,6 +2882,7 @@ div#mCSB_1_container{
   top: 0px;
   right: 0px;
   width: 100%;
+  background-color: white;
 }
 
 .header-style-12 .main-menu .navigation > li > a{
