--- a/activemindtechnologies/src/company/company.component.html
+++ b/activemindtechnologies/src/company/company.component.html
@@ -460,8 +460,8 @@
             <div></div>
             <div class="auto-container">
                 <div class="content-box">
-                    <h1 class="d_block fs_60 lh_70 fw_bold mb_250">Our Services</h1>
-                    <img src="/assets/img/page-title.jpg" width="100%">
+                    <h1 class="d_block fs_60 lh_70 fw_bold mb_250ve">Our Company</h1>
+                    <img src="/assets/img/Company_1.jpg" width="100%">
                     
                     
                 </div>
@@ -478,11 +478,10 @@
                         <div class="service-sidebar p_relative d_block mr_30">
                             <div class="category-widget p_relative d_block mb_60">
                                 <ul class="category-list clearfix">
-                                    <li class="p_relative d_block mb_10"><a  class="p_relative d_block fs_16 fw_sbold font_family_inter current"><i class="icon-11"></i>IT Support Staffing</a></li>
-                                    <li class="p_relative d_block mb_10"><a  class="p_relative d_block fs_16 fw_sbold font_family_inter "><i class="icon-12"></i>IT Consulting</a></li>
-                                    <li class="p_relative d_block mb_10"><a  class="p_relative d_block fs_16 fw_sbold font_family_inter"><i class="icon-13"></i>Recruitment & Overseas education</a></li>
-                                    <li class="p_relative d_block mb_10"><a  class="p_relative d_block fs_16 fw_sbold font_family_inter"><i class="icon-119"></i>University assignments & Exams</a></li>
-                                    <li class="p_relative d_block"><a  class="p_relative d_block fs_16 fw_sbold font_family_inter"><i class="icon-121"></i>HR & Immigration</a></li>
+                                    <li class="p_relative d_block mb_10"><a  class="p_relative d_block fs_16 fw_sbold font_family_inter current"><i class="icon-11"></i>About Us</a></li>
+                                    <li class="p_relative d_block mb_10"><a class="p_relative d_block fs_16 fw_sbold font_family_inter "><i class="icon-12"></i>Mission & Vision</a></li>
+                                    <li class="p_relative d_block mb_10"><a  class="p_relative d_block fs_16 fw_sbold font_family_inter"><i class="icon-13"></i>Career</a></li>
+                                    
                                 </ul>
                             </div>
                            
@@ -493,13 +492,13 @@
                         <div class="service-details-content">
                             <div class="content-one p_relative d_block mb_65">
                                 <div class="text p_relative d_block mb_60">
-                                    <h2 class="d_block fs_40 fw_sbold lh_50 mb_25">IT Support Staffing</h2><br>
+                                    <h2 class="d_block fs_40 fw_sbold lh_50 mb_25">About Us</h2><br>
                                     <p class="font_family_poppins mb_25">Exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. excepteur sint occae cat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
                                 </div>
                                 <div class="image-box">
                                     <div class="row clearfix">
                                         <div class="col-lg-6 col-md-6 col-sm-12 image-column">
-                                            <figure class="image p_relative d_block"><img src="assets/img/service-47.jpg" alt=""></figure>
+                                            <figure class="image p_relative d_block"><img src="./Atrix - HTML 5 Template Preview_files/service-47.jpg" alt=""></figure>
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-12 image-column">
                                             <figure class="image p_relative d_block"><img src="./Atrix - HTML 5 Template Preview_files/service-48.jpg" alt=""></figure>
@@ -507,7 +506,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <!--<div class="content-two p_relative d_block mb_55">
+                            <div class="content-two p_relative d_block mb_55">
                                 <div class="tabs-box">
                                     <div class="tab-btn-box p_relative d_block mb_35">
                                         <ul class="tab-btns tab-buttons clearfix p_relative">
@@ -530,7 +529,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>-->
+                            </div>
                             <div class="two-column p_relative d_block mb_40">
                                 <div class="row clearfix">
                                     <div class="col-lg-6 col-md-6 col-sm-12 text-column">
