--- a/activemindtechnologies/src/app/app.component.html
+++ b/activemindtechnologies/src/app/app.component.html
@@ -1,2 +1,19 @@
+<!-- Fav Icon -->
+<link rel="icon" href="" type="image/x-icon">
+
+<!-- Stylesheets -->
+<link href="/assets/css/font-awesome-all.css" rel="stylesheet">
+<link href="/assets/css/flaticon.css" rel="stylesheet">
+
+<link href="/assets/css/bootstrap.css" rel="stylesheet">
+<link href="/assets/css/jquery.fancybox.min.css" rel="stylesheet">
+
+<link href="/assets/css/color.css" rel="stylesheet">
+<link href="/assets/css/global.css" rel="stylesheet">
+
+
+<link href="/assets/css/elpath.css" rel="stylesheet">
+<link href="/assets/css/style.css" rel="stylesheet">
+
 <router-outlet>  
 </router-outlet>
