Login and sign up added

--- a/activemindtechnologies/src/home/home.component.html
+++ b/activemindtechnologies/src/home/home.component.html
@@ -119,7 +119,7 @@
 
 
         <!-- clients-one -->
-        <section class="clients-one home-12 p_relative pt_100">
+        <!--<section class="clients-one home-12 p_relative pt_100">
             <div class="auto-container">
                 <div class="five-item-carousel owl-carousel owl-theme owl-nav-none owl-dots-none owl-loaded owl-drag">
 
@@ -259,7 +259,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>-->
         <!-- clients-one end -->
 
 
