--- a/activemindtechnologies/src/company/company.component.html
+++ b/activemindtechnologies/src/company/company.component.html
@@ -185,68 +185,29 @@
         <!-- clients-one -->
         <!-- footer-12 -->
         <footer class="footer-12">
-            <div class="footer-top-two">
-                <div class="auto-container clearfix">
-                    <figure class="footer-logo pull-left">
-                        <a href="index.html"><!--<img src="/assets/css/footer-logo-4.png" alt="">--></a>
-                    </figure>
-                    <ul class="footer-menu mt_12 pull-right clearfix">
-                        <li><a href="index-2.html">Management</a></li>
-                        <li><a href="index-2.html">Company</a></li>
-                        <li><a href="index-2.html">Career</a></li>
-                        <li><a href="index-2.html">Location</a></li>
-                        <li><a href="index-2.html">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
+            
             <div class="auto-container">
                 <div class="footer-widget-section">
                     <div class="row clearfix">
                         <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
                             <div class="footer-widget about-widget">
                                 <div class="text">
-                                    <p>We work with a passion of taking challenges and creating new ones in advertising sector.</p>
+                                    <p>We work with a passion of taking challenges and creating new ones in advertising
+                                        sector.</p>
                                 </div>
-                                <ul class="footer-social-two clearfix">
-                                    <li><a href="index-2.html"><i class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="index-2.html"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="index-2.html"><i class="fab fa-vimeo-v"></i></a></li>
-                                    <li><a href="index-2.html"><i class="fab fa-google-plus-g"></i></a></li>
-                                </ul>
+                                
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
                             <div class="footer-widget links-widget ml_80">
-                                <div class="widget-title">
-                                    <h4>Links</h4>
-                                </div>
-                                <div class="widget-content">
-                                    <ul class="links-list clearfix">
-                                        <li><a href="index.html">About</a></li>
-                                        <li><a href="index.html">Services</a></li>
-                                        <li><a href="index.html">Job</a></li>
-                                        <li><a href="index.html">opportunities</a></li>
-                                        <li><a href="index.html">Location</a></li>
-                                        <li><a href="index.html">Article</a></li>
-                                    </ul>
-                                </div>
+                               
+                               
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-6 col-sm-12 footer-column">
                             <div class="footer-widget links-widget">
-                                <div class="widget-title">
-                                    <h4>Services</h4>
-                                </div>
-                                <div class="widget-content">
-                                    <ul class="links-list clearfix">
-                                        <li><a href="index.html">About</a></li>
-                                        <li><a href="index.html">Services</a></li>
-                                        <li><a href="index.html">Job</a></li>
-                                        <li><a href="index.html">opportunities</a></li>
-                                        <li><a href="index.html">Location</a></li>
-                                        <li><a href="index.html">Article</a></li>
-                                    </ul>
-                                </div>
+                               
+                               
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
@@ -258,7 +219,8 @@
                                     <ul class="info-list clearfix">
                                         <li>16609 Garden Drive, Celina, TX 75009</li>
                                         <li><a href="tel:23055873407">+1 510-432-7320</a></li>
-                                        <li><a href="mailto:sample@example.com">contact@activemindtechnologies.com</a></li>
+                                        <li><a href="mailto:sample@example.com">contact@activemindtechnologies.com</a>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -276,20 +238,6 @@
                 </div>
             </div>
         </footer>
-        <!-- footer-12 end -->
-
-
-        <!--Scroll to top-->
-        <div class="scroll-to-top">
-            <div>
-                <div class="scroll-top-inner">
-                    <div class="scroll-bar">
-                        <div class="bar-inner"></div>
-                    </div>
-                    <div class="scroll-bar-text g_color_2">Go To Top</div>
-                </div>
-            </div>
-        </div>
         <!-- Scroll to top end -->
     </div>
 
