--- a/activemindtechnologies/src/timesheetsignup/timesheetregister.component.html
+++ b/activemindtechnologies/src/timesheetsignup/timesheetregister.component.html
@@ -15,10 +15,10 @@
   <!-- loader-->
 	<link href="/assets/timesheet/css/pace.min.css" rel="stylesheet">
 
-  <title>Login</title>
+  <title>Register</title>
 </head>
 
-<body style="background-image: url('/assets/timesheet/img/bg-img.png'); width:100%; min-height: 100%; background-repeat: no-repeat;background-attachment: fixed;background-size: 100% 100%;">
+<body>
     <div class="pace  pace-inactive">
         
         <div class="pace-progress" data-progress-text="100%" data-progress="99" style="transform: translate3d(100%, 0px, 0px);">
@@ -36,7 +36,7 @@
           <div class="col-12 col-lg-4 mx-auto">
             <div class="card shadow rounded-5 overflow-hidden">
                   <div class="card-body p-4 p-sm-5">
-                    <h5 class="card-title">Sign Up</h5>
+                    <h5 class="card-title" style="color:blue"><strong>Sign Up</strong></h5>
                     
                     <form class="form-body">
                       
