--- a/activemindtechnologies/src/timesheetsignup/timesheetregister.component.html
+++ b/activemindtechnologies/src/timesheetsignup/timesheetregister.component.html
@@ -38,31 +38,41 @@
                   <div class="card-body p-4 p-sm-5">
                     <h5 class="card-title" style="color:blue"><strong>Sign Up</strong></h5>
                     
-                    <form class="form-body">
+                    <form class="form-body" [formGroup]="signinform">
                       
                       <div class="login-separater text-center mb-4"> 
                         <hr>
                       </div>
                         <div class="row g-3">
                           <div class="col-12">
-                            <label for="inputEmailAddress" class="form-label">Name</label>
+                            <label for="inputEmailAddress" class="form-label">First Name</label>
                             <div class="ms-auto position-relative">
                               <div class="position-absolute top-50 translate-middle-y search-icon px-3"><i class="bi bi-envelope-fill"></i></div>
-                              <input type="name" class="form-control radius-30 ps-5" id="inputEmailAddress" placeholder="Name">
+                              <input type="fname" formControlName="signinform"  [(ngModel)]="fname" class="form-control radius-30 ps-5" id="inputEmailAddress" placeholder="First Name">
+                              <span class="text-danger" *ngIf="submitted && fname == ''">
+                                * Email is required
+                            </span>
+                            </div>
+                          </div>
+                          <div class="col-12">
+                            <label for="inputEmailAddress" class="form-label">Last Name</label>
+                            <div class="ms-auto position-relative">
+                              <div class="position-absolute top-50 translate-middle-y search-icon px-3"><i class="bi bi-envelope-fill"></i></div>
+                              <input type="name" formControlName="lname"  [(ngModel)]="lname" class="form-control radius-30 ps-5" id="inputEmailAddress" placeholder="Last Name">
                             </div>
                           </div>
                           <div class="col-12">
                             <label for="inputEmailAddress" class="form-label">Email Address</label>
                             <div class="ms-auto position-relative">
                               <div class="position-absolute top-50 translate-middle-y search-icon px-3"><i class="bi bi-envelope-fill"></i></div>
-                              <input type="email" class="form-control radius-30 ps-5" id="inputEmailAddress" placeholder="Email Address">
+                              <input type="email" formControlName="email"  [(ngModel)]="email" class="form-control radius-30 ps-5" id="inputEmailAddress" placeholder="Email Address">
                             </div>
                           </div>
                           <div class="col-12">
                             <label for="inputChoosePassword" class="form-label">Enter Password</label>
                             <div class="ms-auto position-relative">
                               <div class="position-absolute top-50 translate-middle-y search-icon px-3"><i class="bi bi-lock-fill"></i></div>
-                              <input type="password" class="form-control radius-30 ps-5" id="inputChoosePassword" placeholder="Enter Password">
+                              <input type="password" formControlName="password"  [(ngModel)]="password" class="form-control radius-30 ps-5" id="inputChoosePassword" placeholder="Enter Password">
                             </div>
                           </div>
                           <div class="col-6">
