--- a/activemindtechnologies/src/app/app.component.html
+++ b/activemindtechnologies/src/app/app.component.html
@@ -1746,7 +1746,8 @@
                                 <div class="widget-content">
                                     <ul class="info-list clearfix">
                                         <li>16609 Garden Drive, Celina, TX 75009</li>
-                                        <li><a href="tel:23055873407">+1 510-432-7320</a></li>
+                                        <li>Direct: <a href="tel:23055873407">+1 510-432-7320</a></li>
+                                        <li>Office: <a href="tel:23055873407">+1 945-527-2227</a></li>
                                         <li><a href="mailto:sample@example.com">contact@activemindtechnologies.com</a></li>
                                     </ul>
                                 </div>
